# Broadcaster

./: .gitignore  CMakeLists.txt  Info.plist  MainWindow.cpp  MainWindow.h  README.md  main.cpp  main.h
Window/: HelloWorldWindow.cpp
include/: main.h
include/GuiWindows/: HelloWorldWindow.h  MainWindow.h
include/Models/: BroadcastedServiceModel.h
src/: AppDispatcher.cpp  AppDispatcher.h  main.cpp  main.h
src/GuiWindows/: HelloWorldWindow.cpp  HelloWorldWindow.h  MainWindow.cpp  MainWindow.h
src/Models/: BroadcastedService.cpp  BroadcastedService.h  BroadcastedServiceModel.cpp  Channel.cpp  Channel.h  LogMessage.cpp  LogMessage.h  Model.cpp  Model.h
src/ORM/: BaseModel.cpp  BaseModel.h  DbConnection.cpp  DbConnection.h  DbField.h  ModelQueryBuilder.cpp  ModelQueryBuilder.h  QueryBuilder.cpp  QueryBuilder.h
